[project]
name = "web-module-6"
version = "0.1.0"
description = ""
authors = [
    {name = "pradivliany",email = "yaroslavpradyvlianyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=37.3.0,<38.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
